# ssd-models

./: .gitignore  CMakeLists.txt  MobileNet_SSD.sln  README.md  Run.bat  RunFaceDetect.bat  build.sh  clean.bat  convert2lmdb.py  create_all.py  create_data.bat  create_data.sh  create_list.py  create_lmdb.py  demo.py  download_data.sh  face_detect.py  face_train.py  faceboxes_test.py  gen_model.sh  requirements.txt  run.sh  score_ssd_face.py  ssd-face.pyproj  ssd-face.sln  ssd-models.sln  test.py  test.txt  test_name_size.txt  train.py  trainval.txt
Face/: MobileNetSSD_deploy.prototxt  MobileNetSSD_deploy_depth.prototxt  MobileNetSSD_test.prototxt  MobileNetSSD_train.prototxt  convert2nccn.bat  deploy_nobn.prototxt  solver.prototxt
Head/: MobileNetSSD_train.prototxt  convert2lmdb.py  labelmap.prototxt  solver_test.prototxt
MobileNetSSD/: run.sh
Person/: MobileNetSSD_deploy.prototxt  convert2lmdb.py  solver_test.prototxt
Windows/: cpp.vcxproj  ssd.vcxproj  ssd_caffe.vcxproj  ssd_opencv.vcxproj
cpp/: FaceBoxes.h  SSDDetector.cpp  SSDDetector.h  SSDFace.cpp  SSDFace.vcxproj  SSDFace.vcxproj.filters  SSDFaceConfig.h  SSDFaceDetector.h  config.h  main.cpp  mrconfig.xml  ssd_caffe.cpp  ssd_opencv.cpp
faceboxes/: convert2lmdb.py  run.sh  solver_train.prototxt  train.prototxt  train.sh
focalloss/: mobilenet+ssd+focal-loss-test.prototxt  mobilenet+ssd+focal-loss-train.prototxt  solver.prototxt
mrdet/: config.py  model.py
ncnn/: ReadMe.md  convert.sh  demo.cpp  demo.py  mask.prototxt
paddle/: convert.sh  run.sh  ssd_paddle.py
py/: demo.py  merge_bn.py  (+3 more)
(+79 files in other folders)
